corrections on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 html,
 body{
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     margin: 0 auto;
     line-height: 1.2;
     font-family: Arial, Helvetica, sans-serif;
@@ -196,7 +196,6 @@ main{
 .main-container{
     display: flex;
     justify-content: space-around;
-    /* margin-left: 100px; */
 }
 
 .image{
@@ -317,7 +316,11 @@ address{
     padding: 0px 7px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 55em) {
+    .header{
+        height: 180px;
+    }
+
     .sub-section{
         width: 100%;
     }
@@ -396,6 +399,44 @@ address{
         margin: 0px 15px;
         font-size: 20px;
         left: 0;
+    }
+
+    .video{
+        width: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+    }
+
+    .header-text-xl{
+        position: absolute;
+        top: 55%;
+        left: 10%;
+        font-size: 15px;
+    }
+
+    .sub-section-flex-container{
+        flex-direction: column;
+        padding: 5px;
+    }
+
+    nav ul{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+      
+    }
+    
+    nav ul li{
+        padding: 0px 10px;
+    }
+    
+    nav ul li a{
+        font-size: 15px;
     }
 
     
